AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = tmw

tmw_CXXFLAGS = -DPKG_DATADIR=\""$(pkgdatadir)/"\"      \
	       -DLOCALEDIR=\""$(localedir)"\"

tmw_SOURCES = gui/widgets/avatar.cpp \
	      gui/widgets/avatar.h \
	      gui/widgets/dropdown.cpp \
	      gui/widgets/dropdown.h \
	      gui/widgets/layout.cpp \
	      gui/widgets/layout.h \
	      gui/widgets/layouthelper.cpp \
	      gui/widgets/layouthelper.h \
	      gui/widgets/resizegrip.cpp \
	      gui/widgets/resizegrip.h \
	      gui/widgets/tab.cpp \
	      gui/widgets/tab.h \
	      gui/widgets/tabbedarea.cpp \
	      gui/widgets/tabbedarea.h \
	      gui/widgets/textpreview.cpp \
	      gui/widgets/textpreview.h \
	      gui/browserbox.cpp \
	      gui/browserbox.h \
	      gui/button.cpp \
	      gui/button.h \
	      gui/buy.cpp \
	      gui/buy.h \
	      gui/buysell.cpp \
	      gui/buysell.h \
	      gui/char_select.cpp \
	      gui/char_select.h \
	      gui/chat.cpp \
	      gui/chat.h \
	      gui/chatinput.cpp \
	      gui/chatinput.h \
	      gui/checkbox.cpp \
	      gui/checkbox.h \
	      gui/confirm_dialog.cpp \
	      gui/confirm_dialog.h \
	      gui/debugwindow.cpp \
	      gui/debugwindow.h \
	      gui/emotecontainer.cpp \
	      gui/emotecontainer.h \
	      gui/emoteshortcutcontainer.cpp \
	      gui/emoteshortcutcontainer.h \
	      gui/emotewindow.cpp \
	      gui/emotewindow.h \
	      gui/equipmentwindow.cpp \
	      gui/equipmentwindow.h \
	      gui/focushandler.cpp \
	      gui/focushandler.h \
	      gui/gccontainer.cpp \
	      gui/gccontainer.h \
	      gui/gui.cpp \
	      gui/gui.h \
	      gui/help.cpp \
	      gui/help.h \
	      gui/icon.cpp \
	      gui/icon.h \
	      gui/inttextfield.cpp \
	      gui/inttextfield.h \
	      gui/inventorywindow.cpp \
	      gui/inventorywindow.h \
	      gui/itemcontainer.cpp \
	      gui/itemcontainer.h \
	      gui/itemlinkhandler.cpp \
	      gui/itemlinkhandler.h \
	      gui/itempopup.cpp \
	      gui/itempopup.h \
	      gui/itemshortcutcontainer.cpp \
	      gui/itemshortcutcontainer.h \
	      gui/item_amount.cpp \
	      gui/item_amount.h \
	      gui/label.cpp \
	      gui/label.h \
	      gui/linkhandler.h \
	      gui/listbox.cpp \
	      gui/listbox.h \
	      gui/login.cpp \
	      gui/login.h \
	      gui/menuwindow.cpp \
	      gui/menuwindow.h \
	      gui/minimap.cpp \
	      gui/minimap.h \
	      gui/ministatus.cpp \
	      gui/ministatus.h \
	      gui/npcintegerdialog.cpp \
	      gui/npcintegerdialog.h \
	      gui/npclistdialog.cpp \
	      gui/npclistdialog.h \
	      gui/npcstringdialog.cpp \
	      gui/npcstringdialog.h \
	      gui/npc_text.cpp \
	      gui/npc_text.h \
	      gui/ok_dialog.cpp \
	      gui/ok_dialog.h \
	      gui/palette.cpp \
	      gui/palette.h \
	      gui/passwordfield.cpp \
	      gui/passwordfield.h \
	      gui/playerbox.cpp \
	      gui/playerbox.h \
	      gui/popup.cpp \
	      gui/popup.h \
	      gui/popupmenu.cpp \
	      gui/popupmenu.h \
	      gui/progressbar.cpp \
	      gui/progressbar.h \
	      gui/radiobutton.cpp \
	      gui/radiobutton.h \
	      gui/recorder.cpp \
	      gui/recorder.h \
	      gui/register.cpp \
	      gui/register.h \
	      gui/scrollarea.cpp \
	      gui/scrollarea.h \
	      gui/sdlinput.cpp \
	      gui/sdlinput.h \
	      gui/sell.cpp \
	      gui/sell.h \
	      gui/setup.cpp \
	      gui/setup.h \
	      gui/setup_audio.cpp \
	      gui/setup_audio.h \
	      gui/setup_colors.cpp \
	      gui/setup_colors.h \
	      gui/setup_joystick.cpp \
	      gui/setup_joystick.h \
	      gui/setup_keyboard.cpp \
	      gui/setup_keyboard.h \
	      gui/setup_players.cpp \
	      gui/setup_players.h \
	      gui/setuptab.h \
	      gui/setup_video.cpp \
	      gui/setup_video.h \
	      gui/shop.cpp \
	      gui/shop.h \
	      gui/shoplistbox.cpp \
	      gui/shoplistbox.h \
	      gui/shortcutwindow.cpp \
	      gui/shortcutwindow.h \
	      gui/shortcutcontainer.cpp \
	      gui/shortcutcontainer.h \
	      gui/skin.cpp \
	      gui/skin.h \
	      gui/slider.cpp \
	      gui/slider.h \
	      gui/speechbubble.cpp \
	      gui/speechbubble.h \
	      gui/table.cpp \
	      gui/table.h \
	      gui/table_model.cpp \
	      gui/table_model.h \
	      gui/textbox.cpp \
	      gui/textbox.h \
	      gui/textdialog.cpp \
	      gui/textdialog.h \
	      gui/textfield.cpp \
	      gui/textfield.h \
	      gui/textrenderer.h \
	      gui/trade.cpp \
	      gui/trade.h \
	      gui/truetypefont.cpp \
	      gui/truetypefont.h \
	      gui/updatewindow.cpp \
	      gui/updatewindow.h \
	      gui/viewport.cpp \
	      gui/viewport.h \
	      gui/window.cpp \
	      gui/window.h \
	      gui/windowcontainer.cpp \
	      gui/windowcontainer.h \
	      net/messagehandler.cpp \
	      net/messagehandler.h \
	      net/messagein.cpp \
	      net/messagein.h \
	      net/messageout.cpp \
	      net/messageout.h \
	      resources/action.cpp \
	      resources/action.h \
	      resources/ambientoverlay.cpp \
	      resources/ambientoverlay.h \
	      resources/animation.cpp \
	      resources/animation.h \
	      resources/colordb.cpp \
	      resources/colordb.h \
	      resources/dye.cpp \
	      resources/dye.h \
	      resources/emotedb.cpp \
	      resources/emotedb.h \
	      resources/image.cpp \
	      resources/image.h \
	      resources/imageloader.cpp \
	      resources/imageloader.h \
	      resources/imageset.h \
	      resources/imageset.cpp \
	      resources/imagewriter.cpp \
	      resources/imagewriter.h \
	      resources/itemdb.cpp \
	      resources/itemdb.h \
	      resources/iteminfo.h \
	      resources/iteminfo.cpp \
	      resources/mapreader.cpp \
	      resources/mapreader.h \
	      resources/monsterdb.cpp \
	      resources/monsterdb.h \
	      resources/monsterinfo.cpp \
	      resources/monsterinfo.h \
	      resources/music.cpp \
	      resources/music.h \
	      resources/npcdb.cpp \
	      resources/npcdb.h \
	      resources/resource.cpp \
	      resources/resource.h \
	      resources/resourcemanager.cpp \
	      resources/resourcemanager.h \
	      resources/soundeffect.h \
	      resources/soundeffect.cpp \
	      resources/spritedef.h \
	      resources/spritedef.cpp \
	      utils/base64.cpp \
	      utils/base64.h \
	      utils/dtor.h \
	      utils/fastsqrt.h \
	      utils/gettext.h \
	      utils/sha256.cpp \
	      utils/sha256.h \
	      utils/stringutils.cpp \
	      utils/stringutils.h \
	      utils/strprintf.cpp \
	      utils/strprintf.h \
	      utils/mutex.h \
	      utils/xml.cpp \
	      utils/xml.h \
	      animatedsprite.cpp \
	      animatedsprite.h \
	      animationparticle.cpp \
	      animationparticle.h \
	      being.cpp \
	      being.h \
	      beingmanager.cpp \
	      beingmanager.h \
	      channel.cpp \
	      channel.h \
	      channelmanager.cpp \
	      channelmanager.h \
	      commandhandler.cpp \
	      commandhandler.h \
	      configlistener.h \
	      configuration.cpp \
	      configuration.h \
	      effectmanager.cpp \
	      effectmanager.h \
	      emoteshortcut.cpp \
	      emoteshortcut.h \
	      engine.cpp \
	      engine.h \
	      equipment.cpp \
	      equipment.h \
	      floor_item.cpp \
	      floor_item.h \
	      flooritemmanager.cpp \
	      flooritemmanager.h \
	      game.cpp \
	      game.h \
	      graphics.cpp \
	      graphics.h \
	      guichanfwd.h \
	      imageparticle.cpp \
	      imageparticle.h \
	      inventory.cpp \
	      inventory.h \
	      item.cpp \
	      item.h \
	      itemshortcut.cpp \
	      itemshortcut.h \
	      joystick.cpp \
	      joystick.h \
	      keyboardconfig.cpp \
	      keyboardconfig.h \
	      localplayer.cpp \
	      localplayer.h \
	      lockedarray.h \
	      log.cpp \
	      log.h \
	      logindata.h \
	      main.cpp \
	      main.h \
	      map.cpp\
	      map.h \
	      monster.cpp\
	      monster.h \
	      npc.cpp \
	      npc.h \
	      openglgraphics.cpp\
	      openglgraphics.h \
	      particle.cpp \
	      particle.h \
	      particlecontainer.cpp \
	      particlecontainer.h \
	      particleemitter.cpp \
	      particleemitter.h \
	      particleemitterprop.h \
	      player.cpp \
	      player.h \
	      player_relations.cpp \
	      player_relations.h \
	      position.cpp \
	      position.h \
	      properties.h \
	      serverinfo.h \
	      shopitem.cpp \
	      shopitem.h \
	      simpleanimation.cpp \
	      simpleanimation.h \
	      sound.cpp \
	      sound.h \
	      sprite.h \
	      statuseffect.cpp \
	      statuseffect.h \
	      text.cpp \
	      text.h \
	      textmanager.cpp \
	      textmanager.h \
	      textparticle.cpp \
	      textparticle.h \
	      tileset.h \
	      units.cpp \
	      units.h \
	      vector.cpp \
	      vector.h

if SERVER_TMWSERV
tmw_CXXFLAGS += -DTMWSERV_SUPPORT
tmw_SOURCES += \
	      gui/buddywindow.cpp \
	      gui/buddywindow.h \
	      gui/changeemaildialog.cpp \
	      gui/changeemaildialog.h \
	      gui/changepassworddialog.cpp \
	      gui/changepassworddialog.h \
	      gui/connection.cpp \
	      gui/connection.h \
	      gui/guildlistbox.cpp \
	      gui/guildlistbox.h \
	      gui/guildwindow.cpp \
	      gui/guildwindow.h \
	      gui/magic.cpp \
	      gui/magic.h \
	      gui/npcpostdialog.cpp \
	      gui/npcpostdialog.h \
	      gui/partywindow.cpp \
	      gui/partywindow.h \
	      gui/quitdialog.cpp \
	      gui/quitdialog.h \
	      gui/serverdialog.cpp \
	      gui/serverdialog.h \
	      gui/skilldialog.cpp \
	      gui/skilldialog.h \
	      gui/statuswindow.cpp \
	      gui/statuswindow.h \
	      gui/unregisterdialog.cpp \
	      gui/unregisterdialog.h \
	      net/tmwserv/accountserver/account.cpp \
	      net/tmwserv/accountserver/account.h \
	      net/tmwserv/accountserver/accountserver.cpp \
	      net/tmwserv/accountserver/accountserver.h \
	      net/tmwserv/accountserver/internal.cpp \
	      net/tmwserv/accountserver/internal.h \
	      net/tmwserv/chatserver/chatserver.cpp \
	      net/tmwserv/chatserver/chatserver.h \
	      net/tmwserv/chatserver/guild.cpp \
	      net/tmwserv/chatserver/guild.h \
	      net/tmwserv/chatserver/internal.cpp \
	      net/tmwserv/chatserver/internal.h \
	      net/tmwserv/chatserver/party.cpp \
	      net/tmwserv/chatserver/party.h \
	      net/tmwserv/gameserver/gameserver.cpp \
	      net/tmwserv/gameserver/gameserver.h \
	      net/tmwserv/gameserver/internal.cpp \
	      net/tmwserv/gameserver/internal.h \
	      net/tmwserv/gameserver/player.cpp \
	      net/tmwserv/gameserver/player.h \
	      net/tmwserv/beinghandler.cpp \
	      net/tmwserv/beinghandler.h \
	      net/tmwserv/buysellhandler.cpp \
	      net/tmwserv/buysellhandler.h \
	      net/tmwserv/charserverhandler.cpp \
	      net/tmwserv/charserverhandler.h \
	      net/tmwserv/chathandler.cpp \
	      net/tmwserv/chathandler.h \
	      net/tmwserv/connection.cpp \
	      net/tmwserv/connection.h \
	      net/tmwserv/effecthandler.cpp \
	      net/tmwserv/effecthandler.h \
	      net/tmwserv/guildhandler.cpp \
	      net/tmwserv/guildhandler.h \
	      net/tmwserv/internal.cpp \
	      net/tmwserv/internal.h \
	      net/tmwserv/inventoryhandler.cpp \
	      net/tmwserv/inventoryhandler.h \
	      net/tmwserv/itemhandler.h \
	      net/tmwserv/itemhandler.cpp \
	      net/tmwserv/loginhandler.cpp \
	      net/tmwserv/loginhandler.h \
	      net/tmwserv/logouthandler.cpp \
	      net/tmwserv/logouthandler.h \
	      net/tmwserv/network.cpp \
	      net/tmwserv/network.h \
	      net/tmwserv/npchandler.cpp \
	      net/tmwserv/npchandler.h \
	      net/tmwserv/partyhandler.cpp \
	      net/tmwserv/partyhandler.h \
	      net/tmwserv/playerhandler.cpp \
	      net/tmwserv/playerhandler.h \
	      net/tmwserv/protocol.h \
	      net/tmwserv/tradehandler.cpp \
	      net/tmwserv/tradehandler.h \
	      resources/buddylist.cpp \
	      resources/buddylist.h \
	      guild.cpp \
	      guild.h
endif

if SERVER_EATHENA
tmw_CXXFLAGS += -DEATHENA_SUPPORT
tmw_SOURCES += \
	      gui/char_server.cpp \
	      gui/char_server.h \
	      gui/skill.cpp \
	      gui/skill.h \
	      gui/status.cpp \
	      gui/status.h \
	      gui/storagewindow.cpp \
	      gui/storagewindow.h \
	      net/ea/beinghandler.cpp \
	      net/ea/beinghandler.h \
	      net/ea/buysellhandler.cpp \
	      net/ea/buysellhandler.h \
	      net/ea/charserverhandler.cpp \
	      net/ea/charserverhandler.h \
	      net/ea/chathandler.cpp \
	      net/ea/chathandler.h \
	      net/ea/equipmenthandler.cpp \
	      net/ea/equipmenthandler.h \
	      net/ea/inventoryhandler.cpp \
	      net/ea/inventoryhandler.h \
	      net/ea/itemhandler.cpp \
	      net/ea/itemhandler.h \
	      net/ea/loginhandler.cpp \
	      net/ea/loginhandler.h \
	      net/ea/maploginhandler.cpp \
	      net/ea/maploginhandler.h \
	      net/ea/network.cpp \
	      net/ea/network.h \
	      net/ea/npchandler.cpp \
	      net/ea/npchandler.h \
	      net/ea/partyhandler.cpp \
	      net/ea/partyhandler.h \
	      net/ea/playerhandler.cpp \
	      net/ea/playerhandler.h \
	      net/ea/protocol.cpp \
	      net/ea/protocol.h \
	      net/ea/skillhandler.cpp \
	      net/ea/skillhandler.h \
	      net/ea/tradehandler.cpp \
	      net/ea/tradehandler.h \
	      party.cpp \
	      party.h
endif

# set the include path found by configure
INCLUDES = $(all_includes)
